Fixed projects clipping out of the screen.

--- a/homepage-frontend/css/projects.scss
+++ b/homepage-frontend/css/projects.scss
@@ -2,6 +2,8 @@
 
 .projects-page {
 	.projects {
+		flex-shrink: 1;
+
 		padding-top: 0.5rem;
 
 		display: flex;
